syntax = "proto3";

option csharp_namespace = "InventoryService.gRPC.Server.Protos";

service Inventory {
	rpc AddService (GrpcNewServiceRequest) returns (GrpcStatusResponse);
	rpc SearchService (GrpcServiceSearchRequest) returns (GrpcServiceList);
	rpc GetService (GrpcServiceSearchRequest) returns (Service);
}

// responses --------------------------------------------------

message GrpcStatusResponse {
	bool ok = 1;
	string message = 2;
}

message GrpcServiceList {
	repeated Service services = 1;
	SearchPagination pagination = 2;
}

// requests --------------------------------------------------------

message GrpcNewProductRequest {
	string seller = 1;
	string name = 2;
	string description = 3;
	double price = 4;
	repeated string picturesUris = 5;
}

message GrpcNewServiceRequest {
	GrpcNewProductRequest productData = 1;
	int32 warrantyInDays = 2;
}

// search stuff
message GrpcProductSearchRequest {
	StringSearchField seller = 1;
	StringSearchField name = 2;
	double price = 3;
	SearchPagination pagination = 4;
}

message StringSearchField {
	string value = 1;
	StringSearchFieldFlags falgs = 2;
}

message StringSearchFieldFlags {
	bool exactMatch = 1;
}

message GrpcServiceSearchRequest {
	GrpcProductSearchRequest productData = 1;
}


// models ---------------------------------------

// super class
message Product {
	string id = 1;
	string seller = 2;
	string description = 3;
	double price = 4;
	repeated string pictures = 5;
}

message Service {
	string id = 1;
	string name = 2;
	string seller = 3;
	string description = 4;
	double price = 5;
	int32 warrantyInDays = 6;
	repeated string pictures = 7;
}

message Item {
	string id = 1;
	string seller = 2;
	string description = 3;
	double price = 4;
	repeated ItemDetail details = 5;
	repeated string pictures = 6;
}

message ItemDetail {
	string name = 1;
	string value = 2;
}

message SearchPagination {
	int32 offset = 1;
	int32 limit = 2;
	int32 total = 3;
}

//simplefied 
//the ideia is to keep queries light weight and fast by using the less data as possible
message SimplifiedProduct {
	string id = 1;
	string name = 2;
	string type = 3;
	double price = 4;
	repeated string pictures = 5;
}